--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -4,23 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>@ViewData["Title"] - RRHH System</title>
+    <title>@ViewData["Title"] - Sistema RRHH</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/metisMenu.min.css" rel="stylesheet">
-    <link href="~/css/timeline.css" rel="stylesheet">
     <link href="~/css/startmin.css" rel="stylesheet">
-    <link href="~/css/morris.css" rel="stylesheet">
     <link href="~/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <div id="wrapper">
-        <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">RRHH System</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Sistema de Recursos Humanos</a>
             </div>
 
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,7 +30,31 @@
             <ul class="nav navbar-right navbar-top-links">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> Usuario <b class="caret"></b>
+                        <i class="fa fa-bell fa-fw"></i> <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu dropdown-alerts">
+                        <li>
+                            <a href="#">
+                                <div>
+                                    <i class="fa fa-comment fa-fw"></i> Nueva Solicitud
+                                    <span class="pull-right text-muted small">4 minutos</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">
+                                <div>
+                                    <i class="fa fa-envelope fa-fw"></i> Nuevo Mensaje
+                                    <span class="pull-right text-muted small">12 minutos</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i> Admin <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="#"><i class="fa fa-user fa-fw"></i> Perfil</a></li>
@@ -44,38 +65,56 @@
                 </li>
             </ul>
 
-            <!-- Sidebar -->
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a asp-controller="Home" asp-action="Index" class="active">
-                                <i class="fa fa-dashboard fa-fw"></i> Dashboard
-                            </a>
+                            <a asp-controller="Home" asp-action="Index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-users fa-fw"></i> Empleados<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="#">Lista de Empleados</a>
-                                </li>
-                                <li>
-                                    <a href="#">Agregar Empleado</a>
-                                </li>
+                                <li><a href="#">Gestión de Empleados</a></li>
+                                <li><a href="#">Contratos</a></li>
+                                <li><a href="#">Documentos</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-calendar fa-fw"></i> Asistencia</a>
+                            <a href="#"><i class="fa fa-calendar fa-fw"></i> Asistencia<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">Control de Asistencia</a></li>
+                                <li><a href="#">Permisos y Licencias</a></li>
+                                <li><a href="#">Vacaciones</a></li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-money fa-fw"></i> Nómina</a>
+                            <a href="#"><i class="fa fa-money fa-fw"></i> Nómina<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">Planilla</a></li>
+                                <li><a href="#">Bonificaciones</a></li>
+                                <li><a href="#">Deducciones</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Capacitación<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">Cursos</a></li>
+                                <li><a href="#">Evaluaciones</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-file-text fa-fw"></i> Reportes<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li><a href="#">Planilla</a></li>
+                                <li><a href="#">Asistencia</a></li>
+                                <li><a href="#">Evaluaciones</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
                 @RenderBody()
@@ -83,12 +122,9 @@
         </div>
     </div>
 
-    <!-- Scripts -->
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/metisMenu.min.js"></script>
-    <script src="~/js/raphael.min.js"></script>
-    <script src="~/js/morris.min.js"></script>
     <script src="~/js/startmin.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
